# ElaboratoN7

./: CMakeLists.txt  Goal.cpp  Goal.h  MapSearchNode.cpp  MapSearchNode.h  Mappa.cpp  Mappa.h  Tile.cpp  Tile.h  character.cpp  character.h  display.cpp  display.h  fsa.h  main.cpp  stlastar.h
Maps/: a  b  c
TEST/: CMakeLists.txt  Test.cpp  runTest.cpp
