cmake_minimum_required(VERSION 3.17)
add_subdirectory(./googletest)
set(gtest_SOURCE_DIR, ./googletest/)
include_directories(${gtest_SOURCE_DIR}/include${gtest_SOURCE_DIR})

set(SOURCE_TEST_FILES runTest.cpp Test.cpp)
add_executable(runTest ${SOURCE_TEST_FILES})
target_link_libraries(runTest gtest gtest_main core)
find_package(SFML 2 COMPONENTS system network graphics window audio REQUIRED)
if (SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    target_link_libraries(runTest ${SFML_LIBRARIES})
endif ()